// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dialog > passes through additional html attributes 1`] = `
<div
  aria-labelledby="s0-0-0-dialog-title"
  aria-modal="true"
  class="panel-dialog class1 panel-dialog--mask-fade-slow"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  hidden=""
  role="dialog"
  style="color:red"
  type="number"
>
  <div
    class="panel-dialog__window panel-dialog__window--slide"
  >
    <div
      class="panel-dialog__header"
    >
      <!--F#13-->
      <h2
        class="panel-dialog__title"
        id="s0-0-0-dialog-title"
      >
        <!--F#2-->
        Heading
        <!--F/-->
      </h2>
      <!--F/-->
      <!--F#14-->
      <button
        aria-label="Close Panel"
        class="icon-btn panel-dialog__close"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon icon--16"
          focusable="false"
        >
          <defs>
            <symbol
              id="icon-close-16"
              viewBox="0 0 16 16"
            >
              <path
                d="M2.293 2.293a1 1 0 0 1 1.414 0L8 6.586l4.293-4.293a1 1 0 1 1 1.414 1.414L9.414 8l4.293 4.293a1 1 0 0 1-1.414 1.414L8 9.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L6.586 8 2.293 3.707a1 1 0 0 1 0-1.414Z"
              />
            </symbol>
          </defs>
          <use
            href="#icon-close-16"
          />
        </svg>
      </button>
      <!--F/-->
    </div>
    <div
      class="panel-dialog__main"
    >
      <!--F#16-->
      <!--F#1-->
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <p>
        <a
          href="http://www.ebay.com"
        >
          www.ebay.com
        </a>
      </p>
      <!--F/-->
      <!--F/-->
    </div>
  </div>
</div>
`;

exports[`dialog > passes through additional html attributes 2`] = `
<div
  aria-labelledby="s0-0-0-dialog-title"
  aria-modal="true"
  class="panel-dialog class1 panel-dialog--mask-fade-slow"
  data-passed-through="true"
  data-testid="AttributePassthrough"
  hidden=""
  role="dialog"
  style="color:red"
  type="number"
>
  <div
    class="panel-dialog__window panel-dialog__window--slide"
  >
    <div
      class="panel-dialog__header"
    >
      <!--F#13-->
      <h2
        class="panel-dialog__title"
        id="s0-0-0-dialog-title"
      >
        <!--F#2-->
        Heading
        <!--F/-->
      </h2>
      <!--F/-->
      <!--F#14-->
      <button
        aria-label="Close Panel"
        class="icon-btn panel-dialog__close"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon icon--16"
          focusable="false"
        >
          <defs>
            <symbol
              id="icon-close-16"
              viewBox="0 0 16 16"
            >
              <path
                d="M2.293 2.293a1 1 0 0 1 1.414 0L8 6.586l4.293-4.293a1 1 0 1 1 1.414 1.414L9.414 8l4.293 4.293a1 1 0 0 1-1.414 1.414L8 9.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L6.586 8 2.293 3.707a1 1 0 0 1 0-1.414Z"
              />
            </symbol>
          </defs>
          <use
            href="#icon-close-16"
          />
        </svg>
      </button>
      <!--F/-->
    </div>
    <div
      class="panel-dialog__main"
    >
      <!--F#16-->
      <!--F#1-->
      <p>
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
      </p>
      <p>
        <a
          href="http://www.ebay.com"
        >
          www.ebay.com
        </a>
      </p>
      <!--F/-->
      <!--F/-->
    </div>
  </div>
</div>
`;

exports[`dialog > renders basic version 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33maria-labelledby[39m=[32m"s0-0-0-dialog-title"[39m
    [33maria-modal[39m=[32m"true"[39m
    [33mclass[39m=[32m"panel-dialog panel-dialog--mask-fade-slow"[39m
    [33mhidden[39m=[32m""[39m
    [33mrole[39m=[32m"dialog"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m"panel-dialog__window panel-dialog__window--slide"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"panel-dialog__header"[39m
      [36m>[39m
        [36m<h2[39m
          [33mclass[39m=[32m"panel-dialog__title"[39m
          [33mid[39m=[32m"s0-0-0-dialog-title"[39m
        [36m>[39m
          [0mHeading[0m
        [36m</h2>[39m
        [36m<button[39m
          [33maria-label[39m=[32m"Close Panel"[39m
          [33mclass[39m=[32m"icon-btn panel-dialog__close"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-close-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33md[39m=[32m"M2.293 2.293a1 1 0 0 1 1.414 0L8 6.586l4.293-4.293a1 1 0 1 1 1.414 1.414L9.414 8l4.293 4.293a1 1 0 0 1-1.414 1.414L8 9.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L6.586 8 2.293 3.707a1 1 0 0 1 0-1.414Z"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-close-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</button>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"panel-dialog__main"[39m
      [36m>[39m
        [36m<p>[39m
          [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
        [36m</p>[39m
        [36m<p>[39m
          [36m<a[39m
            [33mhref[39m=[32m"http://www.ebay.com"[39m
          [36m>[39m
            [0mwww.ebay.com[0m
          [36m</a>[39m
        [36m</p>[39m
      [36m</div>[39m
    [36m</div>[39m
  [36m</div>[39m
  [36m<button[39m
    [33mclass[39m=[32m"btn btn--secondary"[39m
    [33mdata-ebayui[39m=[32m""[39m
    [33mtype[39m=[32m"button"[39m
  [36m>[39m
    [0mOpen Dialog[0m
  [36m</button>[39m
[36m</DocumentFragment>[39m"
`;

exports[`dialog > renders with footer 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33maria-labelledby[39m=[32m"s0-0-0-dialog-title"[39m
    [33maria-modal[39m=[32m"true"[39m
    [33mclass[39m=[32m"panel-dialog panel-dialog--mask-fade-slow"[39m
    [33mhidden[39m=[32m""[39m
    [33mrole[39m=[32m"dialog"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m"panel-dialog__window panel-dialog__window--slide"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"panel-dialog__header"[39m
      [36m>[39m
        [36m<h2[39m
          [33mclass[39m=[32m"panel-dialog__title"[39m
          [33mid[39m=[32m"s0-0-0-dialog-title"[39m
        [36m>[39m
          [0mHeading[0m
        [36m</h2>[39m
        [36m<button[39m
          [33maria-label[39m=[32m"Close Dialog"[39m
          [33mclass[39m=[32m"icon-btn panel-dialog__close"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-close-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33md[39m=[32m"M2.293 2.293a1 1 0 0 1 1.414 0L8 6.586l4.293-4.293a1 1 0 1 1 1.414 1.414L9.414 8l4.293 4.293a1 1 0 0 1-1.414 1.414L8 9.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L6.586 8 2.293 3.707a1 1 0 0 1 0-1.414Z"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-close-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</button>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"panel-dialog__main"[39m
      [36m>[39m
        [36m<p>[39m
          [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
        [36m</p>[39m
        [36m<p>[39m
          [36m<a[39m
            [33mhref[39m=[32m"http://www.ebay.com"[39m
          [36m>[39m
            [0mwww.ebay.com[0m
          [36m</a>[39m
        [36m</p>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"panel-dialog__footer"[39m
      [36m>[39m
        [36m<button[39m
          [33mclass[39m=[32m"btn"[39m
        [36m>[39m
          [0mButton 1[0m
        [36m</button>[39m
        [36m<button[39m
          [33mclass[39m=[32m"btn"[39m
        [36m>[39m
          [0mButton 2[0m
        [36m</button>[39m
      [36m</div>[39m
    [36m</div>[39m
  [36m</div>[39m
  [36m<button[39m
    [33mclass[39m=[32m"btn btn--secondary"[39m
    [33mdata-ebayui[39m=[32m""[39m
    [33mtype[39m=[32m"button"[39m
  [36m>[39m
    [0mOpen Dialog[0m
  [36m</button>[39m
[36m</DocumentFragment>[39m"
`;

exports[`dialog > renders with previous button 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33maria-labelledby[39m=[32m"s0-0-0-dialog-title"[39m
    [33maria-modal[39m=[32m"true"[39m
    [33mclass[39m=[32m"panel-dialog panel-dialog--mask-fade-slow"[39m
    [33mhidden[39m=[32m""[39m
    [33mrole[39m=[32m"dialog"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m"panel-dialog__window panel-dialog__window--slide"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"panel-dialog__header"[39m
      [36m>[39m
        [36m<button[39m
          [33maria-label[39m=[32m"Go back"[39m
          [33mclass[39m=[32m"icon-btn panel-dialog__prev"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-chevron-left-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33md[39m=[32m"M3.293 8.708a1 1 0 0 1 0-1.415l6-6a1 1 0 0 1 1.414 1.414L5.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414l-6-6Z"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-chevron-left-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</button>[39m
        [36m<h2[39m
          [33mclass[39m=[32m"panel-dialog__title"[39m
          [33mid[39m=[32m"s0-0-0-dialog-title"[39m
        [36m>[39m
          [0mHeading[0m
        [36m</h2>[39m
        [36m<button[39m
          [33maria-label[39m=[32m"Close Dialog"[39m
          [33mclass[39m=[32m"icon-btn panel-dialog__close"[39m
          [33mtype[39m=[32m"button"[39m
        [36m>[39m
          [36m<svg[39m
            [33maria-hidden[39m=[32m"true"[39m
            [33mclass[39m=[32m"icon icon--16"[39m
            [33mfocusable[39m=[32m"false"[39m
          [36m>[39m
            [36m<defs>[39m
              [36m<symbol[39m
                [33mid[39m=[32m"icon-close-16"[39m
                [33mviewBox[39m=[32m"0 0 16 16"[39m
              [36m>[39m
                [36m<path[39m
                  [33md[39m=[32m"M2.293 2.293a1 1 0 0 1 1.414 0L8 6.586l4.293-4.293a1 1 0 1 1 1.414 1.414L9.414 8l4.293 4.293a1 1 0 0 1-1.414 1.414L8 9.414l-4.293 4.293a1 1 0 0 1-1.414-1.414L6.586 8 2.293 3.707a1 1 0 0 1 0-1.414Z"[39m
                [36m/>[39m
              [36m</symbol>[39m
            [36m</defs>[39m
            [36m<use[39m
              [33mhref[39m=[32m"#icon-close-16"[39m
            [36m/>[39m
          [36m</svg>[39m
        [36m</button>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"panel-dialog__main"[39m
      [36m>[39m
        [36m<p>[39m
          [0mLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.[0m
        [36m</p>[39m
        [36m<p>[39m
          [36m<a[39m
            [33mhref[39m=[32m"http://www.ebay.com"[39m
          [36m>[39m
            [0mwww.ebay.com[0m
          [36m</a>[39m
        [36m</p>[39m
      [36m</div>[39m
    [36m</div>[39m
  [36m</div>[39m
  [36m<button[39m
    [33mclass[39m=[32m"btn btn--secondary"[39m
    [33mdata-ebayui[39m=[32m""[39m
    [33mtype[39m=[32m"button"[39m
  [36m>[39m
    [0mOpen Dialog[0m
  [36m</button>[39m
[36m</DocumentFragment>[39m"
`;
